--- a/servicios.html
+++ b/servicios.html
@@ -14,6 +14,18 @@
 
   <!-- Custom styles for this template -->
   <link href="css/blog-home.css" rel="stylesheet">
+  
+  <!-- Hotjar Tracking Code for https://xchgre.github.io/ipo-blog-2019/index.html -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1317313,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
 </head>
 
@@ -55,7 +67,7 @@
                 <div class="bs-calltoaction bs-calltoaction-default">
                     <div class="row">                       
                         <div class="col-md-10 cta-button">
-                            <h3>IPO - BLOG</h3>
+                            <h2>IPO - BLOG</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta <a href="http://studium.usal.es/" target="_blank">Studium</a> 
 							</p>
                         </div>
@@ -64,19 +76,19 @@
             </div>
         </div>
             <div class="col-md-12">
-            <H2>¿Qué dicen los usuarios sobre nosotros?</H2>
+            <h2>¿Qué dicen los usuarios sobre nosotros?</h2>
             </div>
 			<div class="card mb-4">
 				<div class="container">
     				<blockquote class="quote-box">
       					
-      					<p class="quote-text">
-       						Lorem ipsum dolor sit amet
+      					<p class="quote-text" style="margin:10px 10px">
+       						<b>Lorem ipsum dolor sit amet </b>
       					</p>
       					<hr>
       					<div class="blog-post-actions">
         					<p class="blog-post-bottom pull-left">
-          					Pepe el de Jamina
+          					Pepe de Madrid
         					</p>
         					<p class="blog-post-bottom pull-right">
           						<span class="badge quote-badge">8236</span>  ❤
@@ -89,13 +101,13 @@
 				<div class="container">
     				<blockquote class="quote-box">
       					
-      					<p class="quote-text">
-       						Consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta,
+      					<p class="quote-text" style="margin:10px 10px">
+       						<b>Consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta</b>
       					</p>
       					<hr>
       					<div class="blog-post-actions">
         					<p class="blog-post-bottom pull-left">
-          					Juan el de el Francisco
+          					Juan de Doh
         					</p>
         					<p class="blog-post-bottom pull-right">
           						<span class="badge quote-badge">9925</span>  ❤
