--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
         <h1 class="my-4">IPO Blog
           <small>El mejor Blog</small>
+		  <a href="https://surveys.hotjar.com/s?siteId=1317313&surveyId=133598" class="btn btn-primary"> Hacer la encuesta &rarr;</a>
         </h1>
 
         <!-- Blog Post -->
