--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="">Inicio</a>
+            <a class="nav-link" href="#">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="somos.html">¿Quienes somos?</a>
