--- a/entrada.html
+++ b/entrada.html
@@ -141,14 +141,14 @@
 
         <!-- Side Widget -->
         <div class="card my-4">
-          <h5 class="card-header">Últimas noticias!</h5>
+          <h5 class="card-header">Ayudanos a mejorar!</h5>
           <div class="card-body">
-            ¡No habrá exámen final!
+            ¡Responde esta sencilla encuesta!
+			<a href="https://surveys.hotjar.com/s?siteId=1317313&surveyId=133598" class="btn btn-primary"> Hacer la encuesta &rarr;</a>
           </div>
         </div>
 
       </div>
-
     </div>
     <!-- /.row -->
 
