--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
       <div class="col-md-8">
 
         <h1 class="my-4">IPO Blog
-          <small>El mejor Blog</small>
-		  <a href="https://surveys.hotjar.com/s?siteId=1317313&surveyId=133598" class="btn btn-primary"> Hacer la encuesta &rarr;</a>
+          <small>El mejor Blog</small>		  
         </h1>
 
         <!-- Blog Post -->
@@ -191,9 +190,10 @@
 
         <!-- Side Widget -->
         <div class="card my-4">
-          <h5 class="card-header">Últimas noticias!</h5>
+          <h5 class="card-header">Ayudanos a mejorar!</h5>
           <div class="card-body">
-            ¡No habrá exámen final!
+            ¡Responde esta sencilla encuesta!
+			<a href="https://surveys.hotjar.com/s?siteId=1317313&surveyId=133598" class="btn btn-primary"> Hacer la encuesta &rarr;</a>
           </div>
         </div>
 
